--- a/final-project/src/.env.example
+++ b/final-project/src/.env.example
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:kvIowEFj36Up5dv6SIXTZp7nJj0T/7oDBf/e9ljBg+M=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=192.168.1.5
-DB_PORT=3306
-DB_DATABASE=laravel
+DB_HOST=192.168.1.2
+DB_PORT=6090
+DB_DATABASE=final_project
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -19,7 +19,9 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-REDIS_HOST=192.168.1.5
+MEMCACHED_HOST=192.168.1.2
+
+REDIS_HOST=192.168.1.2
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
